影集表结构修改+软删除机制完善